# pytest_prj

./: pyproject.toml
tests/: test_arrs.py
